Fix modal row rendering and filter menu exit button on iOS and iPad

--- a/src/components/FilterMenu.scss
+++ b/src/components/FilterMenu.scss
@@ -20,7 +20,7 @@
 
   @media (orientation: landscape) {
     width: 90vw;
-    height: 90vh;
+    height: 90%;
   }
 }
 
