--- a/src/components/Modal/ModalRow.scss
+++ b/src/components/Modal/ModalRow.scss
@@ -5,6 +5,7 @@ $thick-padding-constant: 2vmax;
 
 .modal-row {
   display: flex;
+  flex: 0 0 auto;
   flex-flow: row wrap;
   padding: $thick-padding-constant 0vmax;
 
@@ -40,7 +41,6 @@ $thick-padding-constant: 2vmax;
 #modal-top-row {
   border-top: $border-style;
   padding: $padding-constant 0vmax;
-  flex: 1 0 auto;
 }
 
 #modal-centre-section {
